--- a/week5/Lower-level Features - Chroma and MFCC (plus other timbral features).ipynb
+++ b/week5/Lower-level Features - Chroma and MFCC (plus other timbral features).ipynb
@@ -441,7 +441,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -451,14 +450,9 @@
     "\"While theory about timbre is less comprehensive than pitch or loudness, some audio processing tools offer the ability to calculate timbre descriptors that have been found to be meaningful by psychologists. Some descriptors, such as spectral centroid, emerged from the results of psychological tests seeking acoustic correlates of multidimensional scaling embeddings.  These embeddings approximate the results of listening tests where participants were asked to listen to notes from different musical instruments and to rate the similarity between them (Grey, 1977). From related literature, there are a range of descriptors that can be divided into two groups, those that characterise the amount of synchronicity within the spectrum (such as inharmonicity and tonality) and those that describe trends in the distribution of energy in the signal (such as spectral centroid, spectral flatness, spectral flux, spectral roll-off, spectral spread, kurtosis, etc., for details on these descriptors see Peeters et al. (2011)).\"\n",
     "\n",
     "Grey, 1977: http://aum.dartmouth.edu/~mcasey/m102/GreyMultidimensionalScaling.pdf\n",
-    "Peters et al. 2011: https://www.mcgill.ca/mpcl/files/mpcl/peeters_2011_jasa.pdf"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "http://librosa.github.io/librosa/generated/librosa.feature.spectral_centroid.html"
+    "Peters et al. 2011: https://www.mcgill.ca/mpcl/files/mpcl/peeters_2011_jasa.pdf\n",
+    "\n",
+    "This website is useful for understanding the specific librosa implementations: https://musicinformationretrieval.com/spectral_features.html"
    ]
   },
   {
@@ -492,13 +486,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "http://librosa.github.io/librosa/generated/librosa.feature.spectral_bandwidth.html"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
@@ -526,13 +513,6 @@
     "librosa.display.specshow(log_S)\n",
     "plt.title('Spectral Bandwidth and Log Spectrogram')\n",
     "plt.tight_layout()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "http://librosa.github.io/librosa/generated/librosa.feature.spectral_contrast.html"
    ]
   },
   {
@@ -566,13 +546,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "http://librosa.github.io/librosa/generated/librosa.feature.spectral_flatness.html"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
@@ -603,13 +576,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "http://librosa.github.io/librosa/generated/librosa.feature.spectral_rolloff.html"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
@@ -637,13 +603,6 @@
     "librosa.display.specshow(log_S)\n",
     "plt.title('Spectral Rolloff and Log Spectrogram')\n",
     "plt.tight_layout()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "http://librosa.github.io/librosa/generated/librosa.feature.zero_crossing_rate.html"
    ]
   },
   {
