--- a/week6/YIN.ipynb
+++ b/week6/YIN.ipynb
@@ -98,10 +98,9 @@
     "\n",
     "### Function 2\n",
     "subplotFunc(yinvalues,subplotNum,additionalargs)\n",
-    "   \n",
-    "   plt.subplot(1,1,subplotNume)    \n",
-    "   \n",
-    "   plt.plot(np.asarray(yinvalues))\n",
+    "\n",
+    "Calls:\n",
+    "plt.subplot(1,1,subplotNume) and plt.plot(np.asarray(yinvalues))\n",
     "\n",
     "### How you'll call the functions\n",
     "\n",
